--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "mocha": "^5.0.4",
-    "nuxt": "^1.0.0"
+    "moment": "^2.21.0",
+    "nuxt": "^1.0.0",
+    "peer": "^0.2.8"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
